@@ -5,6 +5,10 @@ importFrom(Matrix,
       "colMeans"
 )
 
+importFrom(stats,
+      "extractAIC"
+)
+
 importMethodsFrom(Matrix, "%*%")
 
 
@@ -30,6 +34,8 @@ exportMethods(
               )
 
 export(
+#       "extractAIC",
+       "extractDIC",
        "balance",
        "bayesglm",
        "bayesglm.fit",
@@ -63,8 +69,8 @@ export(
 )
 
 
-
-
+S3method(extractDIC, mer)
+S3method(extractAIC, mer)
 S3method(print, GO)
 S3method(plot, balance)
 S3method(print, balance)
